# Learn_OS_Embedded_Linux

./: .gitignore  CMakeLists.txt  README.md
OperatingSystems/: README.md  ch2_producerconsumer_semaphores.c
linux_device_driver/: Makefile  README.md
linux_kernel_module/: Makefile  README.md
linux_kernel_module/src/: myModule.c
operating_systems/: ch1_system_calls.c  ch2_producerconsumer_conditions.c  ch2_producerconsumer_multireader.c  ch2_producerconsumer_semaphores.c  ring_buffer.c  temp.c
